--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,13 @@
 ---
-import Navbar from "../components/Navbar";
+import Navbar from "../components/Navbar.astro";
+import Carousel from "../components/Carousel";
 import Layout from '../layouts/Layout.astro';
+import '../index.css'
 ---
 
-<Layout title="Welcome to Astro."
-description="descripcion">
+<Layout title="Maquinados y Maquilas Especiales"
+description="Empresa maquiladora y manufacturera">
 		<Navbar />
+		<Carousel />
 </Layout>
 
