--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Navbar from "../components/Navbar.astro";
-import Carousel from "../components/Carousel";
+import Carousel from "../components/Carousel.astro"
 import Layout from '../layouts/Layout.astro';
 import '../index.css'
 ---
