--- a/src/index.css
+++ b/src/index.css
@@ -3,14 +3,17 @@
 @tailwind utilities;
 
 
+@layer base {
 
-
-@import url('./assets/micro.otf');
-  
-@font-face {
-  font-family: 'secundary';
-  src: url('./assets/Open-Regular.ttf');
+  @font-face {
+    font-family: 'primary';
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+    src: url('./assets/Open-Regular.ttf') format('ttf');
+  } 
 }
+
 
 @font-face {
   font-family: 'Open Bold';
@@ -38,20 +41,24 @@
 .nav-link{
   @apply text-secundary
 hover:text-white ease-in-out transition-all m-5
-  font-black font-mono text-xl
+  font-black  text-xl font-mono
 }
-
-.header{
-  @apply  bg-red-400 
-}
-
-.header_cont{
-
-}
-
-
-
-
-
 
 /*navbar*/
+
+
+
+
+/*Carousel*/
+
+
+
+
+
+
+
+
+
+
+
+
