--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -4,4 +4,19 @@
 
 
 
-<div></div>
+
+<div class="cont-form">
+    <form action="" method="post">
+        <label for="">Write Message</label>
+        <div class="cont-form-mail">
+            <input type="search" name="" id="">
+        </div>
+    </form>
+</div>
+
+
+
+
+
+
+
