con posts de wp

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,3 +1,11 @@
+---
+import Layout from "../layouts/Layout.astro"
+---
 
 
-<h1>Esto es el about</h1>
+<Layout title="About"
+description="Empresa Maquiladore">
+  <article>
+    <h1>about</h1>
+  </article>
+</Layout>
