--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,3 +1,11 @@
+---
+import Layout from "../layouts/Layout.astro"
+---
 
 
-<h1>Esto es el contact</h1>
+<Layout title="Contact"
+description="Empresa de servicios de maquila">
+  <article>
+    <h1>Contact</h1>
+  </article>
+</Layout>
