--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,8 @@ import Navbar from "../components/Navbar.astro";
 import Carousel from "../components/Carousel.astro";
 import Layout from "../layouts/Layout.astro";
 import Posts from "../components/Posts.astro";
+import Key from "../components/Key.astro";
+
 import "../index.css";
 ---
 
@@ -13,5 +15,6 @@ import "../index.css";
   <Navbar />
 
   <Carousel />
+  <Key />
   <Posts />
 </Layout>
