--- a/src/components/Posts.astro
+++ b/src/components/Posts.astro
@@ -4,12 +4,12 @@ let posts = await res.json();
 --- 
 
 <section>
-<h1 class="title_services">our services</h1>
+    <h1 class="title_services">Our Services</h1>
     {
       posts.map((post) => (
-        <article class="services_link"
+        <article class="rename">
           <h2>
-            <a href={`/dinos/${post.slug}/`} set:html={post.title.rendered} />
+            <a href={`/posts/${post.slug}/`} set:html={post.title.rendered} />
           </h2>
           <Fragment set:html={post.content.rendered} />
         </article>
@@ -21,7 +21,7 @@ let posts = await res.json();
 
 <style is:global>
     .title_services{
-        @apply bg-gradient-to-b from-blue-600 via-green-500 to-indigo-400 inline-block text-transparent bg-clip-text; 
+        @apply bg-gradient-to-r from-blue-600 via-green-500 to-indigo-400 inline-block text-transparent bg-clip-text text-5xl  
     }
     
     </style>  
