--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -7,12 +7,31 @@
 
 <div class="cont-form">
     <form action="" method="post">
-        <label for="">Write Message</label>
+        <label for="">Contact</label>
+        <h2>Get a Quotte for your project</h2>
+        <p>Fill out the form below to request a quote for your metal project.
+            One of our experts will get in touch with your shortly
+        </p>
         <div class="cont-form-mail">
-            <input type="search" name="" id="">
+            <input type="search" name="name" id="name">
+            <div class="font">
+                <input type="email" name="" id="">
+                <input type="tel" name="" id="">
+            </div>
+            <input type="text" name="" id="">
         </div>
+        <input type="button" value="submit">
     </form>
 </div>
+
+
+
+
+<style is:global>
+
+
+    
+</style>
 
 
 
