--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,13 @@
 ---
+import Image from "astro/components/Image.astro";
 import Navbar from "../components/Navbar.astro";
 import Carousel from "../components/Carousel.astro";
 import Layout from "../layouts/Layout.astro";
 import Posts from "../components/Posts.astro";
 import Key from "../components/Key.astro";
+import corte from "../assets/images/corte.jpg";
+import cnc from "../assets/images/maquinado.jpg";
+import wld from "../assets/images/soldadura.jpg";
 
 import "../index.css";
 ---
@@ -13,7 +17,6 @@ import "../index.css";
   description="Empresa maquiladora y manufacturera"
 >
   <Navbar />
-
   <Carousel />
   <Key />
   <Posts />
