--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,7 +4,7 @@ import Layout from "../layouts/Layout.astro"
 
 
 <Layout title="About"
-description="Empresa Maquiladore">
+description="Empresa maquiladora y manufacturera radicada en celaya y ">
   <article>
     <h1>about</h1>
   </article>
