--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,6 +21,8 @@ const { title, description } = Astro.props;
 	<body>
 		<slot />
 
+		<script is:inline src="../../node_modules/flowbite/dist/flowbite.min.js"></script>
+
 	</body>
 	
 </html>
