--- a/src/components/Key.astro
+++ b/src/components/Key.astro
@@ -1,5 +1,19 @@
 ---
+import { keyFeatures } from "../constant/index"
+import Image from "astro/components/Image.astro";
 ---
 
+<section class="">
+  <h1>Key Features</h1>
+  <div>
+    <title>Why chose Metal Sheets Inc?</title>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam, veritatis eveniet ex asperiores officia consequatur.</p>
+  </div>
 
+  <div>
+{
+  
+}
+  </div>
+</section>
 
