--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -2,45 +2,67 @@
 import { Image } from "astro:assets";
 import logo from "../../public/maqma.svg";
 import iso from "../../public/iso.svg";
+import { navLinks } from "../constant/index";
 ---
 
-<div class="container-nav">
-  <Image src={logo} alt="MAQMA" class="mqm-image" loading="lazy" />
-  <nav class="nav">
-    <a class="nav-link" href="/"> Home </a>
-    <a class="nav-link" href="/about"> About </a>
-    <a class="nav-link" href="/posts"> Services </a>
-    <a class="nav-link" href="/contact"> Contact </a>
-    <a class="phone" href="tel:+461">+524612467946</a>
-  </nav>
+<nav class="bg-primary border-gray-200 dark:bg-gray-900">
+  <div
+    class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
+  >
+    <a
+      href="/"
+      class="flex items-center space-x-3 rtl:space-x-reverse"
+    >
+      <Image src={logo} alt="logo" loading="lazy" />
+    </a>
+    <button
+      data-collapse-toggle="navbar-default"
+      type="button"
+      class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+      aria-controls="navbar-default"
+      aria-expanded="false"
+    >
+      <span class="sr-only">Open main menu</span>
+      <svg
+        class="w-5 h-5"
+        aria-hidden="true"
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 17 14"
+      >
+        <path
+          stroke="currentColor"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M1 1h15M1 7h15M1 13h15"></path>
+      </svg>
+    </button>
 
-  <Image src={iso} alt="MAQMA" class="mqm-image" loading="lazy" />
+    <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+      <ul
+        class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-primary md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-primary dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
+      >
+        {
+          navLinks.map((nav) => (
+            <li>
+              <a
+                href={nav.href}
+                class="block py-2 px-3 text-white hover:text-secundary font-primary bg-primary rounded md:bg-transparent md:text-white md:p-0 dark:text-white md:dark:text-blue-500"
+              >
+                {nav.title}
+              </a>
+            </li>
+          ))
+        }
+      </ul>
+    </div>
 
-  
-</div>
-
-<style is:global>
-  /*navbar*/
-  .container-nav {
-    @apply bg-primary flex flex-row justify-between;
-  }
-
-  .mqm-image {
-    @apply m-8;
-  }
-
-  .nav {
-    @apply mx-auto p-14;
-  }
-
-  .nav-link {
-    @apply text-white
-hover:text-secundary ease-in-out transition-all m-5
-  font-black  text-xl font-primary;
-  }
-
-
-  .phone{
-    @apply text-white mb-10;
-  }
-</style>
+    <Image 
+      src={iso}
+      alt="iso 9001:2015"
+      loading="lazy"
+      class="lg:hidden"
+    />
+  </div>
+</nav>
