--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,9 +1,12 @@
 ---
-
+import { navLinks } from "../constant";
 ---
 
-<footer>
-  <div class=""></div>
+<footer class="flex flex-wrap justify-between">
+  <div class="">
+    <p class="text-white text-xl">&copy; Maquinados y Maquilas Especiales</p>
+    <a href="#"></a>
+  </div>
 </footer>
 
 
