--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -48,7 +48,7 @@ import { navLinks } from "../constant/index";
             <li>
               <a
                 href={nav.href}
-                class="block py-2 px-3 text-white hover:text-secundary font-primary bg-primary rounded md:bg-transparent md:text-white md:p-0 dark:text-white md:dark:text-blue-500"
+                class="block py-2 px-3 text-white hover:text-secundary font-primary bg-primary rounded md:bg-transparent md:p-0"
               >
                 {nav.title}
               </a>
@@ -57,12 +57,5 @@ import { navLinks } from "../constant/index";
         }
       </ul>
     </div>
-
-    <Image 
-      src={iso}
-      alt="iso 9001:2015"
-      loading="lazy"
-      class="lg:hidden"
-    />
   </div>
 </nav>
