--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,11 +1,15 @@
 ---
 import Layout from "../layouts/Layout.astro"
+
 ---
 
 
 <Layout title="About"
 description="Empresa maquiladora y manufacturera radicada en celaya y ">
   <article>
-    <h1>about</h1>
+    <h1 class="text-3xl font-mono text-red-600">
+      About
+  </h1>
   </article>
 </Layout>
+
