--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,10 @@
 ---
-import Image from "astro/components/Image.astro";
 import Navbar from "../components/Navbar.astro";
 import Carousel from "../components/Carousel.astro";
 import Layout from "../layouts/Layout.astro";
-import Posts from "../components/Posts.astro";
 import Key from "../components/Key.astro";
-import corte from "../assets/images/corte.jpg";
-import cnc from "../assets/images/maquinado.jpg";
-import wld from "../assets/images/soldadura.jpg";
-
+import Us from "../components/Us.astro"
+import Footer from "../components/Footer.astro";
 import "../index.css";
 ---
 
@@ -18,4 +14,8 @@ import "../index.css";
 >
   <Navbar />
   <Carousel />
+  <Key/>
+  <Us />
+
+  <Footer />
 </Layout>
