--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,8 @@ import { navLinks } from "../constant";
 
 <footer class="flex flex-wrap justify-between">
   <div class="">
-    <p class="text-white text-xl">&copy; Maquinados y Maquilas Especiales</p>
+    <p class="text-white text-xl m-5 p-5"> &copy; Maquinados y Maquilas Especiale {2022}</p>
+    <p></p>
     <a href="#"></a>
   </div>
 </footer>
