--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,8 @@ import Navbar from "../components/Navbar.astro";
 import Carousel from "../components/Carousel.astro";
 import Layout from "../layouts/Layout.astro";
 import Key from "../components/Key.astro";
-import Us from "../components/Us.astro"
+import Us from "../components/Us.astro";
+import Services from "../components/Services.astro";
 import Footer from "../components/Footer.astro";
 import "../index.css";
 ---
@@ -14,8 +15,9 @@ import "../index.css";
 >
   <Navbar />
   <Carousel />
-  <Key/>
+  <Key />
   <Us />
+  <Services />
 
   <Footer />
 </Layout>
