--- a/src/components/Key.astro
+++ b/src/components/Key.astro
@@ -31,16 +31,16 @@ import premium from "../assets/images/premium.svg";
 <div
   class="conatiner flex flex-col justify-center items-center gap-24 md:flex-row"
 >
-  <div class="max-w-sm bg-transparent border-4 border-gray-200 rounded-lg">
+  <div class="max-w-sm bg-transparent border-4 border-gray-200 shadow-lg shadow-secundary rounded-lg">
     <div class="m-5">
       <Image class="mx-auto" src={custom} alt="dddd" loading="lazy" />
     </div>
-    <div class="p-5">
-      <h5 class="font-primary mb-2 text-white text-2xl text-center">
+    <div class="border-2 p-2">
+      <h5 class="font-primary  text-white text-2xl text-center">
         Custom Fabrications
       </h5>
     </div>
-    <p class="text-white font-mono m-2">
+    <p class="text-white font-mono m-2 p-5">
       Here are the biggest enterprise technology acquisitions of 2021 so far, in
       reverse chronological order.
     </p>
@@ -50,16 +50,16 @@ import premium from "../assets/images/premium.svg";
 
   <!-- Item #2 -->
 
-  <div class="max-w-sm bg-transparent border-4 border-gray-200 rounded-lg">
+  <div class="max-w-sm bg-transparent border-4 border-gray-200 rounded-lg shadow-lg shadow-secundary">
     <div class="m-5">
       <Image class="mx-auto" src={fast} alt="dddd" loading="lazy" />
     </div>
-    <div class="p-5">
-      <h5 class="font-primary mb-2 text-white text-2xl text-center">
+    <div class="border-2 p-2">
+      <h5 class="font-primary  text-white text-2xl text-center">
         Custom Fabrications
       </h5>
     </div>
-    <p class="text-white font-mono m-2">
+    <p class="text-white font-mono m-2 p-5">
       Here are the biggest enterprise technology acquisitions of 2021 so far, in
       reverse chronological order.
     </p>
@@ -68,16 +68,16 @@ import premium from "../assets/images/premium.svg";
   <!-- Item #2 -->
 
   <!-- Item #3 -->
-  <div class="max-w-sm bg-transparent border-4 border-gray-200 rounded-lg">
+  <div class="max-w-sm bg-transparent border-4 border-gray-200 rounded-lg shadow-lg shadow-secundary">
     <div class="m-5">
       <Image class="mx-auto" src={premium} alt="dddd" loading="lazy" />
     </div>
-    <div class="p-5">
-      <h5 class="font-primary mb-2 text-white text-2xl text-center">
+    <div class="border-2 p-2">
+      <h5 class="font-primary text-white text-2xl text-center">
         Custom Fabrications
       </h5>
     </div>
-    <p class="text-white font-mono m-2">
+    <p class="text-white font-mono m-2 p-5">
       Here are the biggest enterprise technology acquisitions of 2021 so far, in
       reverse chronological order.
     </p>
