--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -5,11 +5,11 @@
 
 
 
-<div class="cont-form">
-    <form action="" method="post">
-        <label for="">Contact</label>
-        <h2>Get a Quotte for your project</h2>
-        <p>Fill out the form below to request a quote for your metal project.
+<div class="flex flex-col mx-auto">
+    <h2 class="text-center font-primary text-secundary text-3xl p-5">Contact</h2>
+    <form action="" method="post" class="mx-auto border-2 p-10 m-5 rounded-lg">
+        <h2 class="text-white font-primary text-2xl text-center mx-auto p-5">Get a Quotte for your project</h2>
+        <p class="text-lg text-center">Fill out the form below to request a quote for your metal project.
             One of our experts will get in touch with your shortly
         </p>
         <div class="cont-form-mail">
@@ -23,15 +23,6 @@
         <input type="button" value="submit">
     </form>
 </div>
-
-
-
-
-<style is:global>
-
-
-    
-</style>
 
 
 
