--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -1,53 +1,91 @@
 ---
-import Image from "astro/components/Image.astro"
+import Image from "astro/components/Image.astro";
 ---
-
-
-
-<div id="controls-carousel" class="relative w-full" data-carousel="static">
-  <h2 class="text-center text-secundary font-primary text-2xl">Services</h2>
-  <!-- Carousel wrapper -->
-  <div class="relative h-56 overflow-hidden rounded-lg md:h-96">
-       <!-- Item 1 -->
-      <div class="hidden duration-700 ease-in-out" data-carousel-item>
-          <img src="/docs/images/carousel/carousel-1.svg" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
-      </div>
-      <!-- Item 2 -->
-      <div class="hidden duration-700 ease-in-out" data-carousel-item="active">
-          <img src="/docs/images/carousel/carousel-2.svg" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
-      </div>
-      <!-- Item 3 -->
-      <div class="hidden duration-700 ease-in-out" data-carousel-item>
-          <img src="/docs/images/carousel/carousel-3.svg" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
-      </div>
-      <!-- Item 4 -->
-      <div class="hidden duration-700 ease-in-out" data-carousel-item>
-          <img src="/docs/images/carousel/carousel-4.svg" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
-      </div>
-      <!-- Item 5 -->
-      <div class="hidden duration-700 ease-in-out" data-carousel-item>
-          <img src="/docs/images/carousel/carousel-5.svg" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
-      </div>
+<h2 class="text-secundary text-center font-primary text-3xl p-2 m-5 ">Services</h2>
+<div class="grid grid-cols-2 mx-auto md:grid-cols-3 gap-5 max-w-screen-lg ">
+   
+  <div>
+    <img
+      class="h-auto max-w-full rounded-lg"
+      src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image.jpg"
+      alt=""
+    />
   </div>
-  <!-- Slider controls -->
-  <button type="button" class="absolute top-0 start-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-prev>
-      <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
-          <svg class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
-              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 1 1 5l4 4"/>
-          </svg>
-          <span class="sr-only">Previous</span>
-      </span>
-  </button>
-  <button type="button" class="absolute top-0 end-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-next>
-      <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
-          <svg class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
-              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
-          </svg>
-          <span class="sr-only">Next</span>
-      </span>
-  </button>
+  <div>
+    <img
+      class="h-auto max-w-full rounded-lg"
+      src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-1.jpg"
+      alt=""
+    />
+  </div>
+  <div>
+    <img
+      class="h-auto max-w-full rounded-lg"
+      src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-2.jpg"
+      alt=""
+    />
+  </div>
+  <div>
+    <img
+      class="h-auto max-w-full rounded-lg"
+      src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-3.jpg"
+      alt=""
+    />
+  </div>
+  <div>
+    <img
+      class="h-auto max-w-full rounded-lg"
+      src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-4.jpg"
+      alt=""
+    />
+  </div>
+  <div>
+    <img
+      class="h-auto max-w-full rounded-lg"
+      src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-5.jpg"
+      alt=""
+    />
+  </div>
+  <div>
+    <img
+      class="h-auto max-w-full rounded-lg"
+      src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-6.jpg"
+      alt=""
+    />
+  </div>
+  <div>
+    <img
+      class="h-auto max-w-full rounded-lg"
+      src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-7.jpg"
+      alt=""
+    />
+  </div>
+  <div>
+    <img
+      class="h-auto max-w-full rounded-lg"
+      src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-8.jpg"
+      alt=""
+    />
+  </div>
+  <div>
+    <img
+      class="h-auto max-w-full rounded-lg"
+      src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-9.jpg"
+      alt=""
+    />
+  </div>
+  <div>
+    <img
+      class="h-auto max-w-full rounded-lg"
+      src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-10.jpg"
+      alt=""
+    />
+  </div>
+  <div>
+    <img
+      class="h-auto max-w-full rounded-lg"
+      src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-11.jpg"
+      alt=""
+    />
+  </div>
 </div>
-
-
-
-
