--- a/src/components/Us.astro
+++ b/src/components/Us.astro
@@ -7,7 +7,7 @@
   <h2 class="font-primary text-secundary text-center text-2xl">About Us</h2>
   <!-- Contenedor de la imagen -->
   <div
-    class="m-20 bg-[url('/public/hero.jpg')] bg-no-repeat bg-cover h-128 rounded-md mt-8"
+    class="m-20 bg-[url('/public/hero.jpg')] bg-no-repeat bg-cover h-128 rounded-md mt-8 shadow-lg shadow-blue-500"
   >
     <h3 class="text-white font-primary text-center pt-10 text-3xl">More about now</h3>
     <p class="text-white pt-10 px-5 text-center mx-auto text-xl">
