--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Layout from "../layouts/Layout.astro";
 import Key from "../components/Key.astro";
 import Us from "../components/Us.astro";
 import Services from "../components/Services.astro";
+import Form from "../components/Form.astro";
 import Footer from "../components/Footer.astro";
 import "../index.css";
 ---
@@ -18,6 +19,7 @@ import "../index.css";
   <Key />
   <Us />
   <Services />
+  <Form />
 
   <Footer />
 </Layout>
