--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,45 +2,11 @@
 import { navLinks } from "../constant";
 ---
 
-<footer class="flex flex-wrap justify-between">
-  <div class="">
-    <p class="text-white text-xl m-5 p-5"> &copy; Maquinados y Maquilas Especiale {2022}</p>
-    <p></p>
-    <a href="#"></a>
+<footer class="flex flex-wrap justify-between mx-auto">
+  <div class="flex flex-wrap justify-beetween">
+    <p class="text-white text-xl m-5 p-5">
+      &copy; Maquinados y Maquilas Especiales {2022}
+    </p>
+    <a href="tel:+4612467946" class="text-white">4612467946</a>
   </div>
 </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
