--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -2,31 +2,62 @@
 
 ---
 
+<!-- Div container -->
+<div class="flex flex-col md:mx-auto">
+  <h2 class="text-center font-primary text-secundary text-3xl p-5">Contact</h2>
 
+<!--Conatiner form -->
+  <form action="" method="post" class="mx-auto border-2 p-10 m-5 rounded-lg grid gap-5">
+    <h2 class="text-white font-primary text-2xl text-center mx-auto p-2">
+      Get a Quotte for your project
+    </h2>
+    <p class="text-lg text-center text-white max-w-144 p-2 m-5">
+      Fill out the form below to request a quote for your metal project. One of
+      our experts will get in touch with your shortly
+    </p>
 
+    <input
+    type="search"
+    name="name"
+    id="name"
+    class="bg-white text-primary rounded-md placeholder:text-black mx-auto max-w-full"
+    placeholder="Escribe tu nombre"
+  />
 
-<div class="flex flex-col mx-auto">
-    <h2 class="text-center font-primary text-secundary text-3xl p-5">Contact</h2>
-    <form action="" method="post" class="mx-auto border-2 p-10 m-5 rounded-lg">
-        <h2 class="text-white font-primary text-2xl text-center mx-auto p-5">Get a Quotte for your project</h2>
-        <p class="text-lg text-center">Fill out the form below to request a quote for your metal project.
-            One of our experts will get in touch with your shortly
-        </p>
-        <div class="cont-form-mail">
-            <input type="search" name="name" id="name">
-            <div class="font">
-                <input type="email" name="" id="">
-                <input type="tel" name="" id="">
-            </div>
-            <input type="text" name="" id="">
-        </div>
-        <input type="button" value="submit">
-    </form>
+    <div class="cont-form-mail p-5 mx-auto">
+     
+      <div class="font">
+        <input
+          type="email"
+          name=""
+          id=""
+          class="bg-white text-primary rounded-md placeholder:text-black"
+          placeholder="Escribe tu correo"
+        />
+        <input
+          type="tel"
+          name=""
+          id=""
+          class="bg-white text-primary rounded-md placeholder:text-black"
+          placeholder="escribe tu telefono"
+        />
+      </div>
+      <!--  Write text -->
+      <input
+        type="text"
+        name=""
+        id=""
+        class="bg-white text-primary rounded-md placeholder:text-black"
+        placeholder="Escribe tu mensaje"
+      />
+    </div>
+
+    <!-- Submit -->
+    <button
+      type="button"
+      class="cursor-pointer border-2 rounded-md mx-auto p-4 text-center text-white font-primary hover:text-secundary"
+    >
+      Enviar
+    </button>
+  </form>
 </div>
-
-
-
-
-
-
-
