--- a/src/components/Carousel.astro
+++ b/src/components/Carousel.astro
@@ -9,7 +9,7 @@ import soldadura from "../assets/images/soldadura.jpg";
   <!-- Carousel wrapper -->
   <div class="relative h-56 overflow-hidden rounded-lg md:h-96">
     <!-- Item 1 -->
-    <div class="hidden duration-700 ease-in-out" data-carousel-item>
+    <div class="hidden duration-700 ease-in-out h-full" data-carousel-item>
       <Image
         src={corte}
         alt="corte"
