--- a/src/components/Carousel.astro
+++ b/src/components/Carousel.astro
@@ -1,18 +1,19 @@
 ---
 import Image from "astro/components/Image.astro";
-import corte from "../assets/images/corte.jpg";
-import maquinado from "../assets/images/maquinado.jpg";
-import soldadura from "../assets/images/soldadura.jpg";
+import corte from "../../public/images/corte.jpg";
+import maquinado from "../../public/images/maquinado.jpg";
+import soldadura from "../../public/images/soldadura.jpg";
 ---
 
 <div id="default-carousel" class="relative w-full" data-carousel="slide">
   <!-- Carousel wrapper -->
   <div class="relative h-56 overflow-hidden rounded-lg md:h-96">
     <!-- Item 1 -->
-    <div class="hidden duration-700 ease-in-out h-full" data-carousel-item>
+    <div class="hidden duration-700 ease-in-out " data-carousel-item>
       <Image
         src={corte}
         alt="corte"
+        height={1200}
         loading="lazy"
         class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
       />
