--- a/src/components/Key.astro
+++ b/src/components/Key.astro
@@ -2,9 +2,9 @@
 import { keyFeatures } from "../constant/index";
 import Image from "astro/components/Image.astro";
 
-import custom from "../assets/images/custom.svg";
-import fast from "../assets/images/fast.svg";
-import premium from "../assets/images/premium.svg";
+import custom from "../../public/images/custom.svg";
+import fast from "../../public/images/fast.svg";
+import premium from "../../public/images/premium.svg";
 ---
 
 <!-- Section  -->
