--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -1,16 +1,21 @@
 ---
 import Image from "astro/components/Image.astro";
 ---
-<h2 class="text-secundary text-center font-primary text-3xl p-2 m-5 ">Services</h2>
-<div class="grid grid-cols-2 mx-auto md:grid-cols-3 gap-5 max-w-screen-lg ">
-   
+
+<h2 class="text-secundary text-center font-primary text-3xl p-2 m-5">
+  Services
+</h2>
+<div class="grid grid-cols-2 mx-auto md:grid-cols-3 gap-5 max-w-screen-lg">
   <div>
     <img
       class="h-auto max-w-full rounded-lg"
       src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image.jpg"
       alt=""
     />
+
+    <a href="http://"></a>
   </div>
+
   <div>
     <img
       class="h-auto max-w-full rounded-lg"
