--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Us from "../components/Us.astro";
 import Services from "../components/Services.astro";
 import Form from "../components/Form.astro";
 import Footer from "../components/Footer.astro";
-import "../index.css";
+import "../styles/index.css";
 ---
 
 <Layout
