--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import ViewTransitions from 'astro/components/ViewTransitions.astro';
+import { fade } from 'astro:transitions';
 interface Props {
   title: string;
   description: string;
@@ -17,8 +19,10 @@ const { title, description } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <meta name="description" content={description} />
     <title>{title}</title>
+    <ViewTransitions />
   </head>
-  <body>
+  <body transition:animate={fade({ duration: '0.6s' })}>
+  
     <slot />
 
     <script is:inline src="../../node_modules/flowbite/dist/flowbite.min.js"
