--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,7 +8,7 @@
     font-weight: normal;
     font-style: normal;
     font-display: swap;
-    src: url("./assets/micro.otf") format("truetype");
+    src: url("fonts/micro.otf") format("truetype");
   }
 
   @font-face {
@@ -16,7 +16,7 @@
     font-weight: normal;
     font-style: normal;
     font-display: swap;
-    src: url("./assets/Open-Regular.ttf") format("truetype");
+    src: url("fonts/Open-Regular.ttf") format("truetype");
   }
 
 
@@ -25,7 +25,7 @@
     font-weight: normal;
     font-style: normal;
     font-display: swap;
-    src: url("./assets/Open-Medium.ttf") format("truetype");
+    src: url("fonts/Open-Medium.ttf") format("truetype");
   }
 
 
