--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ import { navLinks } from "../constant";
 const year: number = new Date().getFullYear();
 ---
 
-<footer class="border-2 border-red-700">
+<footer class="border-2 rounded-sm">
   <div class="flex flex-wrap items-center justify-between">
     <p class="text-white text-xl font-paragraph m-5 p-5">
       &copy; Maquinados y Maquilas Especiales 
