--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -24,7 +24,7 @@ import "../styles/index.css";
 
 <div class="p-2 mx-auto border-2 max-w-144 rounded-lg ">
   <h2 class="text-secundary text-2xl font-primary text-center ">Sales</h2>
-  <a class="text-white font-paragraph m-5 text-xl text-center mx-auto" href="mailto:contacto@maqma.mx">contacto@maqma.mx</a>
+  <a class="text-white font-paragraph m-5 text-xl text-center" href="mailto:contacto@maqma.mx">contacto@maqma.mx</a>
   <h2 class="text-secundary text-2xl font-primary m-5 text-center">Human Resources</h2>
   <a class="text-white font-paragraph m-5 text-xl text-center mx-auto" href="mailto:rh@maqma.mx">rh@maqma.mx</a>
 </div>
