--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -3,61 +3,26 @@
 ---
 
 <!-- Div container -->
-<div class="flex flex-col md:mx-auto">
-  <h2 class="text-center font-primary text-secundary text-3xl p-5">Contact</h2>
+<h1 class="font-primary text-center text-2xl text-secundary">Contact</h1>
 
-<!--Conatiner form -->
-  <form action="" method="post" class="mx-auto border-2 p-10 m-5 rounded-lg grid gap-5">
-    <h2 class="text-white font-primary text-2xl text-center mx-auto p-2">
-      Get a Quotte for your project
-    </h2>
-    <p class="text-lg text-center text-white max-w-144 p-2 m-5">
-      Fill out the form below to request a quote for your metal project. One of
-      our experts will get in touch with your shortly
-    </p>
+<div class="flex flex-col md:mx-auto border-2 border-white rounded-md max-w-5xl mt-5 ">
+  <h2 class="font-primary text-center text-2xl text-white mt-6">
+    Get a Quote for you Project
+  </h2>
+  <p class="text-white text-lg mx-auto max-w-4xl mt-5">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis et ut
+    magnam odio amet magni voluptatem nam sapiente assumenda hic, animi
+    quibusdam ea reprehenderit recusandae! Perspiciatis accusamus voluptatem
+    minima eos!
+  </p>
+  <!-- description form -->
 
-    <input
-    type="search"
-    name="name"
-    id="name"
-    class="bg-white text-primary rounded-md placeholder:text-black mx-auto max-w-full"
-    placeholder="Escribe tu nombre"
-  />
+  
+  <!-- Formulario -->
+  <div class="mt-6 mx-auto">
+    <form action="POST" class="mx-auto">
+      <input class="mx-auto placeholder:text-black rounded-lg" type="text" name="" id="" placeholder="Ingresa tu nombre">
+        </form>
+  </div>
 
-    <div class="cont-form-mail p-5 mx-auto">
-     
-      <div class="font">
-        <input
-          type="email"
-          name=""
-          id=""
-          class="bg-white text-primary rounded-md placeholder:text-black"
-          placeholder="Escribe tu correo"
-        />
-        <input
-          type="tel"
-          name=""
-          id=""
-          class="bg-white text-primary rounded-md placeholder:text-black"
-          placeholder="escribe tu telefono"
-        />
-      </div>
-      <!--  Write text -->
-      <input
-        type="text"
-        name=""
-        id=""
-        class="bg-white text-primary rounded-md placeholder:text-black"
-        placeholder="Escribe tu mensaje"
-      />
-    </div>
-
-    <!-- Submit -->
-    <button
-      type="button"
-      class="cursor-pointer border-2 rounded-md mx-auto p-4 text-center text-white font-primary hover:text-secundary"
-    >
-      Enviar
-    </button>
-  </form>
 </div>
