--- a/src/layouts/Products.astro
+++ b/src/layouts/Products.astro
@@ -1,7 +1,8 @@
---- 
+---
 const { frontmatter, content } = Astro.props;
 import "../styles/index.css";
 ---
+
 <html>
   <head>
     <title>{frontmatter.title}</title>
@@ -10,6 +11,6 @@ import "../styles/index.css";
     <h1>{frontmatter.title}</h1>
     <article>
       <slot />
- 1   </article>
+    </article>
   </body>
 </html>
