--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -21,13 +21,25 @@ import "../styles/index.css";
   >
   </iframe>
 
+  <div class="p-2 mx-auto border-2 max-w-144 rounded-lg">
+    <div class="mx-auto">
+      <h2 class="text-secundary text-2xl font-primary text-center">Ventas</h2>
+      <a
+        class="text-white font-paragraph mx-auto text-xl text-center"
+        href="mailto:contacto@maqma.mx?subject=Cotización&body=Estoy interesado en cotizar esto:">contacto@maqma.mx</a
+      >
+    </div>
 
-<div class="p-2 mx-auto border-2 max-w-144 rounded-lg ">
-  <h2 class="text-secundary text-2xl font-primary text-center ">Sales</h2>
-  <a class="text-white font-paragraph m-5 text-xl text-center" href="mailto:contacto@maqma.mx">contacto@maqma.mx</a>
-  <h2 class="text-secundary text-2xl font-primary m-5 text-center">Human Resources</h2>
-  <a class="text-white font-paragraph m-5 text-xl text-center mx-auto" href="mailto:rh@maqma.mx">rh@maqma.mx</a>
-</div>
-  
+    <div class="mx-auto">
+      <h2 class="text-secundary text-2xl font-primary m-5 text-center">
+        Recursos humanos
+      </h2>
+      <a
+        class="text-white font-paragraph m-5 text-xl text-center"
+        href="mailto:rh@maqma.mx?subject=Vacantes&body=Estoy interesado en las vacantes disponibles" >rh@maqma.mx</a
+      >
+    </div>
+  </div>
 
+  <Footer />
 </Layout>
